force-app/main/default/objects/ResourceAbsence/fields/Approval_handled_by__c.field-meta.xml
<CustomField>
    <fullName>Approval_handled_by__c</fullName>
    <description>Filled in by the approval process. Indicates the person&apos;s name who approved the request.</description>
    <label>Approval handled by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>