force-app/main/default/objects/ResourceAbsence/fields/HolidayId__c.field-meta.xml
<CustomField>
    <fullName>HolidayId__c</fullName>
    <description>The Id of the Holiday Record which was user for this absence.</description>
    <inlineHelpText>The Id of the Holiday Record which was user for this absence.</inlineHelpText>
    <label>HolidayId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>