force-app/main/default/objects/ResourceAbsence/fields/isMigrated__c.field-meta.xml
<CustomField>
    <fullName>isMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMigrated</label>
    <type>Checkbox</type>
</CustomField>