force-app/main/default/objects/ResourceAbsence/fields/Operating_Hours_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours_Holiday__c</fullName>
    <description>Reference to Operating Hours Holiday record.</description>
    <label>Operating Hours Holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>