force-app/main/default/objects/ResourceAbsence/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This absence is related to this Service Territory</description>
    <inlineHelpText>This absence is related to this Service Territory</inlineHelpText>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Resource Absences</relationshipLabel>
    <relationshipName>Resource_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>