force-app/main/default/objects/ResourceAbsence/recordTypes/Absense.recordType-meta.xml
<RecordType>
    <fullName>Absense</fullName>
    <active>true</active>
    <description>Absense</description>
    <label>Absense</label>
</RecordType>